--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 spring.application.name=backend
-spring.datasource.url=jdbc:mysql://localhost:3306/url_shortener
-spring.datasource.username=url_user
-spring.datasource.password=url_password
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#jwts
+jwt.secret=${JWT_SECRET}
+
+#urls
+#app.frontend.url=${FRONTEND_URL}
+
