--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,9 +5,13 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+server.port=8081
+
 
 #jwts
+#jwt.secret=YqLVYdpZMpBWRuFSNrbHUGK7zeaFI1ttKmYxOBAvfPU=
 jwt.secret=${JWT_SECRET}
+
 
 #urls
 #app.frontend.url=${FRONTEND_URL}
