--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,25 +1,26 @@
 # Step 1: Build the application
-FROM maven:3.9.4-amazoncorretto-17 AS build
+FROM maven:3.9.6-eclipse-temurin-21 AS build
 
 WORKDIR /app
 
-# Copy pom.xml and download dependencies first (cache layer)
+# Copy pom.xml and download dependencies (cache optimization)
 COPY pom.xml .
-RUN mvn -q dependency:resolve
+RUN mvn -q dependency:go-offline
 
 # Copy the entire project and build it
 COPY . .
 RUN mvn -q clean package -DskipTests
 
 # Step 2: Run the application
-FROM amazoncorretto:17
+FROM eclipse-temurin:21-jre
 
 WORKDIR /app
 
 # Copy the built jar file from the first stage
 COPY --from=build /app/target/*.jar app.jar
 
-# Application runs here
-EXPOSE 8080
+# Expose your Spring Boot port
+EXPOSE 8081
 
+# Run the Spring Boot app
 ENTRYPOINT ["java", "-jar", "app.jar"]
