--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 spring.application.name=backend
+
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 server.port=8081
 
-
-#jwts
-#jwt.secret=YqLVYdpZMpBWRuFSNrbHUGK7zeaFI1ttKmYxOBAvfPU=
+# JWT secret
 jwt.secret=${JWT_SECRET}
+
 
 
 #urls
