--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,6 +14,7 @@ server.port=8081
 # JWT secret
 jwt.secret=${JWT_SECRET}
 
+#spring.datasource.url=jdbc:mysql://mysql-shorten25-shortener25.h.aivencloud.com:11542/defaultdb?useSSL=true&trustServerCertificate=true&allowPublicKeyRetrieval=true
 
 
 #urls
